syntax = "proto3";

option csharp_namespace = "GrpcChannel.Protocol.Protos";

package channel;

// Bidirectional duplex service supporting full-duplex RPC
// Both client and server can send requests and receive correlated responses
service DuplexService {
  // Single bidirectional stream for all communication
  rpc Open(stream DuplexMessage) returns (stream DuplexMessage);
}

// Unified message envelope for bidirectional communication
message DuplexMessage {
  string id = 1;
  int64 timestamp_utc = 2;
  map<string, string> metadata = 3;

  oneof content {
    Request request = 4;
    Response response = 5;
    Notification notification = 6;
  }
}

// Request message expecting a correlated response
message Request {
  string correlation_id = 1;   // GUID for correlating response
  string method = 2;           // Method/handler name to invoke
  bytes payload = 3;           // Serialized request payload
  optional int32 timeout_ms = 4;
  map<string, string> headers = 5;
}

// Response message correlated to a request
message Response {
  string correlation_id = 1;   // Must match the request's correlation_id
  StatusCode status = 2;
  bytes payload = 3;           // Serialized response payload
  optional string error = 4;
  optional int32 error_code = 5;
  int64 duration_ms = 6;
  map<string, string> headers = 7;
}

// Fire-and-forget notification (no response expected)
message Notification {
  string topic = 1;
  bytes payload = 2;
  map<string, string> headers = 3;
}

// Response status codes
enum StatusCode {
  STATUS_CODE_UNSPECIFIED = 0;
  STATUS_CODE_OK = 1;
  STATUS_CODE_ERROR = 2;
  STATUS_CODE_NOT_FOUND = 3;
  STATUS_CODE_TIMEOUT = 4;
  STATUS_CODE_CANCELLED = 5;
  STATUS_CODE_UNAUTHORIZED = 6;
  STATUS_CODE_INVALID_REQUEST = 7;
}
